Update admin URL

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     const EVENT_THEME = 'Bold Moves How Women Win: Wealth, Power, and Creativity';
     const KILALI_LOGO_URL = 'https://pddykkkndrygfrwonjak.supabase.co/storage/v1/object/public/Logo/Kalili%20logo.jpg';
     const SIGNATURE_IMAGE_URL = 'https://pddykkkndrygfrwonjak.supabase.co/storage/v1/object/public/Logo/Signature%20-%20Chairperson%20Kilali.png';
-    const ADMIN_EMAILS = ['admin@kilalitribe.com', 'siriwebdv.com']; 
+    const ADMIN_EMAILS = ['admin@kilalitribe.com', 'siriwebdv@gmail.com']; 
     
     const loadImage = async (src) => {
         if (!src) return null;
