--- a/index.html
+++ b/index.html
@@ -222,6 +222,10 @@
                                             <input name="email" type="email" value={formData.email} onChange={handleChange} placeholder="Contact Email (Optional)" className="w-full p-3 rounded-lg border border-gray-300 focus:ring-2 focus:ring-red-400 focus:outline-none transition"/>
                                             <textarea name="feedback" value={formData.feedback} onChange={handleChange} placeholder="Your Feedback: What did you enjoy? What can we improve?" required className="w-full p-3 rounded-lg border border-gray-300 focus:ring-2 focus:ring-red-400 focus:outline-none transition h-32"/>
                                             <button type="submit" disabled={isSubmitting || isAuthReady && participantRecords.length === 0} style={{ backgroundColor: PRIMARY_RED }} className={`w-full p-4 rounded-lg font-bold text-white text-lg transition-all duration-300 shadow-md ${isSubmitting || isAuthReady && participantRecords.length === 0 ? 'opacity-60 cursor-not-allowed' : 'hover:opacity-80 hover:-translate-y-1'}`}>{isSubmitting ? 'Checking...' : 'Submit & Get Certificate'}</button>
+                                            {/* --- NEW: SUPPORT LINK UNDER BUTTON --- */}
+                                            <p className="text-center text-sm text-gray-500 pt-2">
+                                                Having trouble? <a href="mailto:siriwebdv@gmail.com" className="font-semibold text-red-500 hover:underline">Contact Support</a>
+                                            </p>
                                         </form>
                                     )}
                                 </div>
@@ -230,8 +234,8 @@
                     </main>
                 )}
                 <footer className="w-full py-6 text-center text-sm bg-slate-100 border-t border-slate-200">
-                    <div className="max-w-7xl mx-auto text-gray-500">
-                        <p>Copyright &copy; {new Date().getFullYear()} <a href={KILALI_TRIBE_WEBSITE} target="_blank" rel="noopener noreferrer" className="font-semibold ml-1 hover:text-red-600 transition-colors" style={{ color: PRIMARY_RED }}>KilaliTribe</a>. All Rights Reserved.</p>
+                    <div className="max-w-7xl mx-auto flex flex-col sm:flex-row justify-center items-center gap-x-6 gap-y-2 text-gray-500">
+                        <p>Copyright &copy; {new Date().getFullYear()} <a href={KILALI_TRIBE_WEBSITE} target="_blank" rel="noopener noreferrer" className="font-semibold hover:text-red-600 transition-colors" style={{ color: PRIMARY_RED }}>KilaliTribe</a>. All Rights Reserved.</p>
                     </div>
                 </footer>
             </div>
