Add Logo as Favicon

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Feedback & Certificate</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>📝</text></svg>" type="image/svg+xml">
+    <script src="https://cdn.tailwindcss.com"></script>   
+    <link rel="icon" href="https://pddykkkndrygfrwonjak.supabase.co/storage/v1/object/public/Logo/Kalili%20logo.jpg" type="image/jpeg">
     <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
     <style>
         body { font-family: 'Inter', sans-serif; }
